--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,15 +30,23 @@
             android:textColor="#000000"
             android:textSize="38dp" />
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="100dp"
-            android:layout_height="24dp"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center"
-            android:padding="0px"
-            android:text="Button"
-            />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:src="@drawable/ic_baseline_add_24" />
+
+        <!--<com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/extended_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="bottom|right"
+            android:text="test"
+            app:icon="@drawable/ic_baseline_add_24"/>-->
+
+
     </FrameLayout>
 
 </androidx.wear.widget.BoxInsetLayout>
