--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,18 +10,9 @@
     tools:deviceIds="wear"
     android:layout_gravity="center">
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/inner_frame_layout_padding"
-        app:layout_boxedEdges="all">
-
-        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:src="@drawable/ic_baseline_add_24" />-->
+        android:layout_height="match_parent">
 
         <Button
             android:id="@+id/extended_fab"
@@ -29,44 +20,40 @@
             android:layout_width="124dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center|bottom"
-            android:layout_margin="0dp"
+            android:layout_marginTop="136dp"
+            android:layout_marginBottom="43dp"
             android:background="@drawable/button_corners"
+            android:contentDescription="@string/test"
             android:drawableStart="@drawable/ic_baseline_pause_24"
+            android:minHeight="48dp"
             android:padding="12dp"
             android:text="@string/teisi"
-             />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/TextTime"
-            android:layout_width="155dp"
-            android:layout_height="61dp"
-            android:layout_marginTop="40dp"
+            android:layout_width="209dp"
+            android:layout_height="104dp"
+            android:layout_marginTop="75dp"
             android:autofillHints="yes its test"
-            tools:ignore="LabelFor"
             android:ems="10"
-            android:gravity="center|left"
+            android:gravity="center"
             android:inputType=""
             android:lineSpacingExtra="0sp"
             android:text="@string/time_test"
             android:textColor="#000000"
-            android:textSize="36sp" />
+            android:textSize="40sp"
+            app:layout_constraintBottom_toTopOf="@+id/extended_fab"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.72"
+            tools:ignore="LabelFor" />
 
-        <!--<androidx.wear.widget.CircularProgressLayout
-            android:layout_width="65dp"
-            android:layout_height="62dp"
-            android:padding="4dp"
-            app:strokeWidth="4dp">
-
-        </androidx.wear.widget.CircularProgressLayout>-->
-
-       <!-- <ImageView
-            android:id="@+id/image_view"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_baseline_add_24"
-            android:contentDescription="@string/test" />-->
-
-
-    </FrameLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.wear.widget.BoxInsetLayout>
